fix: fix z-index bug of career bug
修复在简历页的层级bug

--- a/public/game/minesweeper/style.css
+++ b/public/game/minesweeper/style.css
@@ -254,7 +254,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 100;
     animation: fadeIn 0.3s ease;
 }
 
